Finished basic setup

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -28,3 +28,8 @@ window#waybar {
     	color: #ffffff;
     	background-color: #26A65B;
 }
+
+#battery {
+	background-color: white;
+    	color: black;
+}
